# Qt_BSU

projects/duolingo/: CMakeLists.txt  audioexercisewidget.cpp  audioexercisewidget.h  authdialog.cpp  authdialog.h  datamanager.cpp  datamanager.h  exercisetypes.h  leveldata.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  user.h  userstatsdialog.cpp  userstatsdialog.h
projects/duolingo/styles/: duolingo_style.qss
raycater/: CMakeLists.txt  canvas.h  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  polygon.cpp  polygon.h  ray.cpp  ray.h
